TradeDangerous, Copyright (C) Oliver "kfsone" Smith, July 2014
==============================================================================

v6.9.2 [wip]
. (kfsone) Feature #158 Find rares based on distance from multiple systems
       "--away <ly>" and "--from <system1> --from <system2> ..."
. (kfsone) "run" -vv output now shows buy and sell price, use -vvv for totals

v6.9.1. Feb 08 2015
. (kfsone) Issue #163: Added "--opt=use3h", "--opt=use2d" and
       "--opt=usefull" options to the maddavo pluggin.
. (kfsone) Fixed a division by zero bug in the --towards option,
. (kfsone) Fixed --towards showing a different destination when it
       was able to reach the goal system with a low-scoring trade,
+ Systems, Stations: (kfsone) Curated EDSC and Maddavo

v6.9.0 Feb 06 2015
. (kfsone) Added "--towards" option to "run" command:
       --towards GOALSYSTEM will restrict the route to destinations which
       move the player towards GOALSYSTEM.
. (kfsone) Added "distanceTo" function to "System" which returns the
       distance in ly to a second system,
. (kfsone) Minor performance gain in distance calculations,

v6.8.5 Feb 04 2015
. (kfsone) Added "trade" command to list station-to-station trades,
. (kfsone) "station" command now lists 5 sell and 5 buy items,
. (kfsone) "station" does a better job of parsing existing station names,
. (kfsone) Removed "--system" from "station" command, use
       trade.py station -a "SYSTEM/Station"
       syntax instead.
. (OpenSS) Added "Run To" option to trade.bat,
. (kfsone) Speed improvements to .csv and .prices loading,
. (kfsone) maddavo plugin tries to explain encoding errors,
. (chmarr) Fixed trade.py using the wrong argument list (#herp),
. (kfsone) titleFixup will handle 'von', 'de' and 'du' correctly,
+ Station/Rare Data (RavenDT)

v6.8.4 Feb 01 2015
. (kfsone) Fixed tradecalculator not selecting most profitable trade sometimes
. (kfsone) Set 'BRUTE_FIT' in the environment to force use of the brute-force